# quarbitrage

./: README.md  ml_structure_documentation.xlsx  pyproject.toml  test.py
data/: cba_trades.csv  cba_trades.xlsx
docs/: ml_structure_documentation.xlsx
garbage/: bars.py
quarbitrage/data_engineering/: __init__.py  labeling.py  rolling_moments.py
quarbitrage/data_structures/: __init__.py  bars.py  imbalance_bars.py  standard_bars.py
quarbitrage/datasets/: __init__.py
quarbitrage/ensemble/: Untitled.ipynb  bagging.py
quarbitrage/math/: __init__.py
quarbitrage/preprocessing/: __init__.py  datatypes.py
quarbitrage/sampling/: bootstrapping.py
quarbitrage/sql/: __init__.py  clients.py  database_client.py  db_creds.yaml  mysql_testing.ipynb  test.py
quarbitrage/tests/: BaggingTest.ipynb  DatabaseClient.ipynb  DevTesting.ipynb  SampleWeightsTesting.ipynb
quarbitrage/utils/: __init__.py  _exception_checks.py  _exceptions.py  file_handling.py  random.py
tsuro/data_engineering/: __init__.py  labeling.py  moving_moments.py  rolling_moments.py
tsuro/data_structures/: __init__.py  bars.py  imbalance_bars.py  standard_bars.py
tsuro/datasets/: load_datasets.py
tsuro/ensemble/: bagging.py
tsuro/math/: __init__.py  distributions.py
tsuro/preprocessing/: datatypes.py
tsuro/sampling/: __init__.py  bootstrapping.py  sample_weights.py
tsuro/sql/: __init__.py  clients.py  database_client.py
tsuro/statistics/: window_stats.py
tsuro/tests/: DevTesting.ipynb  SampleWeightsTesting.ipynb
tsuro/utils/: __init__.py  _exception_checks.py  _testing.py  (+6 more)
(+14 files in other folders)
